<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.ladingpage.devsoftware.ladingpage.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/olaIcon"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:src="@drawable/ola"
                android:contentDescription="Ola Icon"/>

            <TextView
                android:id="@+id/bookTaxi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bookTaxi"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fromYourHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/whereToBook"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/installTheApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/installApplication"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/taxiImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:src="@drawable/taxileft"
                android:contentDescription="@string/taxiIcon"/>

            <ImageButton
                android:id="@+id/googlePlayStoreImageButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonbackground"
                android:src="@drawable/googleplaybadge"
                android:padding="5dp"
                android:contentDescription="@string/playStoreDiscription"
                />

            <ImageButton
                android:id="@+id/appleStoreImageButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonbackground"
                android:src="@drawable/appstorebadge"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/appleStoreDiscription"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
